fix: SonarCloud round 2 - reduce complexity, add constants, fix code smells