@@ -7,7 +7,6 @@ import com.cyberlearnix.shared.repository.enrollment.EnrollmentFormResponseRepos
 import com.cyberlearnix.shared.repository.enrollment.EnrollmentRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -16,24 +15,28 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 public class AdminStatsController {
 
     private static final Logger log = LoggerFactory.getLogger(AdminStatsController.class);
+    private static final String KEY_TOTAL_ENROLLED = "totalEnrolled";
 
-    @Autowired
-    private EnrollmentFormResponseRepository responseRepository;
+    private final EnrollmentFormResponseRepository responseRepository;
+    private final EnrollmentFormConfigRepository configRepository;
+    private final EnrollmentRepository enrollmentRepository;
+    private final CourseServiceClient courseServiceClient;
 
-    @Autowired
-    private EnrollmentFormConfigRepository configRepository;
-
-    @Autowired
-    private EnrollmentRepository enrollmentRepository;
-
-    @Autowired
-    private CourseServiceClient courseServiceClient;
+    public AdminStatsController(
+            EnrollmentFormResponseRepository responseRepository,
+            EnrollmentFormConfigRepository configRepository,
+            EnrollmentRepository enrollmentRepository,
+            CourseServiceClient courseServiceClient) {
+        this.responseRepository = responseRepository;
+        this.configRepository = configRepository;
+        this.enrollmentRepository = enrollmentRepository;
+        this.courseServiceClient = courseServiceClient;
+    }
 
     // ─── Legacy endpoint (kept for backward compat) ──────────────────────────
     @GetMapping("/api/admin/stats/revenue")
@@ -63,9 +66,7 @@ public class AdminStatsController {
             m.put("enrollments", ((Number) row[1]).longValue());
             m.put("revenue", toDouble(row[2]));
             return m;
-        }).collect(Collectors.toList());
-
-        // Top coupons
+        }).toList();
         List<Object[]> couponRows = responseRepository.topCouponsByRevenue();
         List<Map<String, Object>> topCoupons = couponRows.stream().map(row -> {
             Map<String, Object> c = new LinkedHashMap<>();
@@ -74,7 +75,7 @@ public class AdminStatsController {
             c.put("totalSavings", toDouble(row[2]));
             c.put("avgSaving", toDouble(row[3]));
             return c;
-        }).collect(Collectors.toList());
+        }).toList();
 
         // Discount totals: sum of discount_amount from payment_transactions via native coupon query
         double totalDiscounts = topCoupons.stream()
@@ -104,109 +105,98 @@ public class AdminStatsController {
     @GetMapping("/api/admin/reports/courses")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<Map<String, Object>>> getCourseReport() {
-        // Get all active forms that have a courseId
         List<EnrollmentFormConfig> configs = configRepository.findByDeletedAtIsNull();
+        Map<Long, List<String>> courseToForms = buildCourseToFormsMap(configs);
 
-        // Build map: courseId → list of formIds
+        List<Object[]> revenueRows = responseRepository.revenueByForm();
+        Map<String, long[]> formRevMap = new HashMap<>();
+        Map<String, Double> formSumMap = new HashMap<>();
+        for (Object[] row : revenueRows) {
+            String fid = (String) row[0];
+            formRevMap.put(fid, new long[]{((Number) row[1]).longValue()});
+            formSumMap.put(fid, toDouble(row[2]));
+        }
+
+        List<Map<String, Object>> result = new ArrayList<>();
+        for (Map.Entry<Long, List<String>> entry : courseToForms.entrySet()) {
+            result.add(buildCourseEntry(entry.getKey(), entry.getValue(), configs, formRevMap, formSumMap));
+        }
+        result.sort((a, b) -> Long.compare(
+                ((Number) b.get(KEY_TOTAL_ENROLLED)).longValue(),
+                ((Number) a.get(KEY_TOTAL_ENROLLED)).longValue()));
+        return ResponseEntity.ok(result);
+    }
+
+    private Map<Long, List<String>> buildCourseToFormsMap(List<EnrollmentFormConfig> configs) {
         Map<Long, List<String>> courseToForms = new LinkedHashMap<>();
         for (EnrollmentFormConfig cfg : configs) {
             if (cfg.getCourseId() != null) {
                 courseToForms.computeIfAbsent(cfg.getCourseId(), k -> new ArrayList<>()).add(cfg.getId());
             }
         }
+        return courseToForms;
+    }
 
-        // Build map: formId → revenue row (formId, count, sum)
-        List<Object[]> revenueRows = responseRepository.revenueByForm();
-        Map<String, long[]> formRevMap = new HashMap<>(); // formId → [count, sumPaise]
-        Map<String, Double> formSumMap = new HashMap<>(); // formId → sumRevenue
-        for (Object[] row : revenueRows) {
-            String fid = (String) row[0];
-            long cnt = ((Number) row[1]).longValue();
-            double rev = toDouble(row[2]);
-            formRevMap.put(fid, new long[]{cnt});
-            formSumMap.put(fid, rev);
+    private Map<String, Object> buildCourseEntry(Long courseId, List<String> formIds,
+            List<EnrollmentFormConfig> configs, Map<String, long[]> formRevMap, Map<String, Double> formSumMap) {
+        EnrollmentFormConfig primaryConfig = configs.stream()
+                .filter(c -> courseId.equals(c.getCourseId())).findFirst().orElse(null);
+        double coursePrice = primaryConfig != null && primaryConfig.getPaymentAmount() != null
+                ? primaryConfig.getPaymentAmount() : 0.0;
+
+        long totalEnrolled = 0;
+        double totalRevenue = 0.0;
+        long paidCount = 0;
+        for (String fid : formIds) {
+            if (formRevMap.containsKey(fid)) {
+                paidCount += formRevMap.get(fid)[0];
+                totalRevenue += formSumMap.getOrDefault(fid, 0.0);
+            }
+            totalEnrolled += responseRepository.findByFormId(fid).size();
         }
 
-        List<Map<String, Object>> result = new ArrayList<>();
+        double totalListPrice = coursePrice * paidCount;
+        double totalDiscounts = Math.max(0.0, totalListPrice - totalRevenue);
+        double avgPayment = paidCount > 0 ? totalRevenue / paidCount : 0.0;
+        String[] courseInfo = fetchCourseInfo(courseId);
 
-        for (Map.Entry<Long, List<String>> entry : courseToForms.entrySet()) {
-            Long courseId = entry.getKey();
-            List<String> formIds = entry.getValue();
+        Map<String, Object> row = new LinkedHashMap<>();
+        row.put("id", courseId);
+        row.put("title", courseInfo[0]);
+        row.put("coursePrice", coursePrice);
+        row.put("difficulty", courseInfo[1]);
+        row.put("isPublished", Boolean.parseBoolean(courseInfo[2]));
+        row.put(KEY_TOTAL_ENROLLED, totalEnrolled);
+        row.put("totalRevenue", Math.round(totalRevenue * 100.0) / 100.0);
+        row.put("totalDiscounts", Math.round(totalDiscounts * 100.0) / 100.0);
+        row.put("totalListPrice", Math.round(totalListPrice * 100.0) / 100.0);
+        row.put("avgPayment", Math.round(avgPayment * 100.0) / 100.0);
+        row.put("freeEnrollments", totalEnrolled - paidCount);
+        row.put("paidEnrollments", paidCount);
+        row.put("discountEnabled", primaryConfig != null && primaryConfig.isDiscountEnabled());
+        row.put("discountType", primaryConfig != null ? primaryConfig.getDiscountType() : null);
+        row.put("discountValue", primaryConfig != null ? primaryConfig.getDiscountValue() : null);
+        row.put("couponCode", primaryConfig != null ? primaryConfig.getDiscountCouponCode() : null);
+        return row;
+    }
 
-            // Aggregate across all forms for this course
-            long totalEnrolled = 0;
-            double totalRevenue = 0.0;
-            long paidCount = 0;
-
-            // Config-level data (use first form with payment enabled, or first form)
-            EnrollmentFormConfig primaryConfig = configs.stream()
-                    .filter(c -> courseId.equals(c.getCourseId()))
-                    .findFirst().orElse(null);
-
-            double coursePrice = primaryConfig != null && primaryConfig.getPaymentAmount() != null
-                    ? primaryConfig.getPaymentAmount() : 0.0;
-            boolean discountEnabled = primaryConfig != null && primaryConfig.isDiscountEnabled();
-            String discountType = primaryConfig != null ? primaryConfig.getDiscountType() : null;
-            Double discountValue = primaryConfig != null ? primaryConfig.getDiscountValue() : null;
-            String couponCode = primaryConfig != null ? primaryConfig.getDiscountCouponCode() : null;
-
-            for (String fid : formIds) {
-                if (formRevMap.containsKey(fid)) {
-                    paidCount += formRevMap.get(fid)[0];
-                    totalRevenue += formSumMap.getOrDefault(fid, 0.0);
-                }
-                // Count all responses for this form (including free/pending)
-                totalEnrolled += responseRepository.findByFormId(fid).size();
+    private String[] fetchCourseInfo(Long courseId) {
+        String title = "Course #" + courseId;
+        String difficulty = null;
+        String published = "false";
+        try {
+            Map<String, Object> info = courseServiceClient.getCourseInfo(courseId);
+            if (info != null) {
+                title = info.getOrDefault("title", title).toString();
+                if (info.get("difficulty") != null) difficulty = info.get("difficulty").toString();
+                Object pub = info.get("isPublished");
+                if (pub == null) pub = info.get("published");
+                if (pub instanceof Boolean b) published = b.toString();
             }
-
-            // Expected revenue at list price
-            double totalListPrice = coursePrice * paidCount;
-            double totalDiscounts = totalListPrice - totalRevenue;
-            if (totalDiscounts < 0) totalDiscounts = 0.0;
-            double avgPayment = paidCount > 0 ? totalRevenue / paidCount : 0.0;
-
-            // Fetch course info from course-service
-            String courseTitle = "Course #" + courseId;
-            String difficulty = null;
-            boolean isPublished = false;
-            try {
-                Map<String, Object> info = courseServiceClient.getCourseInfo(courseId);
-                if (info != null) {
-                    courseTitle = info.getOrDefault("title", courseTitle).toString();
-                    if (info.get("difficulty") != null) difficulty = info.get("difficulty").toString();
-                    Object pub = info.get("isPublished");
-                    if (pub == null) pub = info.get("published");
-                    if (pub instanceof Boolean b) isPublished = b;
-                }
-            } catch (Exception e) {
-                log.warn("Could not fetch course info for id={}: {}", courseId, e.getMessage());
-            }
-
-            Map<String, Object> row = new LinkedHashMap<>();
-            row.put("id", courseId);
-            row.put("title", courseTitle);
-            row.put("coursePrice", coursePrice);
-            row.put("difficulty", difficulty);
-            row.put("isPublished", isPublished);
-            row.put("totalEnrolled", totalEnrolled);
-            row.put("totalRevenue", Math.round(totalRevenue * 100.0) / 100.0);
-            row.put("totalDiscounts", Math.round(totalDiscounts * 100.0) / 100.0);
-            row.put("totalListPrice", Math.round(totalListPrice * 100.0) / 100.0);
-            row.put("avgPayment", Math.round(avgPayment * 100.0) / 100.0);
-            row.put("freeEnrollments", totalEnrolled - paidCount);
-            row.put("paidEnrollments", paidCount);
-            row.put("discountEnabled", discountEnabled);
-            row.put("discountType", discountType);
-            row.put("discountValue", discountValue);
-            row.put("couponCode", couponCode);
-            result.add(row);
+        } catch (Exception e) {
+            log.warn("Could not fetch course info for id={}: {}", courseId, e.getMessage());
         }
-
-        result.sort((a, b) -> Long.compare(
-                ((Number) b.get("totalEnrolled")).longValue(),
-                ((Number) a.get("totalEnrolled")).longValue()));
-
-        return ResponseEntity.ok(result);
+        return new String[]{title, difficulty, published};
     }
 
     // ─── GET /api/admin/reports/users ─────────────────────────────────────────
@@ -230,7 +220,7 @@ public class AdminStatsController {
     private double toDouble(Object val) {
         if (val == null) return 0.0;
         if (val instanceof BigDecimal bd) return bd.doubleValue();
-        if (val instanceof Number) return ((Number) val).doubleValue();
+        if (val instanceof Number n) return n.doubleValue();
         try { return Double.parseDouble(val.toString()); } catch (Exception e) { return 0.0; }
     }
 }
